--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -41,7 +41,7 @@
           <div class="card mb-2" style="background-color: #f5fbff">
               <div class="card-body py-2" style="background-color: rgba(0, 0, 0, 0);" data-parent="#private-experiments">
                 <div class="row">
-                  <div class="accordion-toggle col-8 px-1" data-toggle="collapse"
+                  <div class="accordion-toggle col-md-8 px-1" data-toggle="collapse"
                        onclick="$('#collapse{{exp.id}}').collapse('toggle');" >
                     <a class="card-title explink"
                        href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}
