--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -27,7 +27,7 @@
         Public Experiment{{ public_experiments.count|pluralize}}
         </h4>
       </div>
-      <div class="pull-right">
+      <div class="pull-right mb-1">
         <button type="button" class="btn btn-outline-secondary btn-sm"
                 onclick="$('#public-experiments .collapse').collapse('hide');" >
         Collapse all</button>
