--- a/tardis/tardis_portal/templates/tardis_portal/shared.html
+++ b/tardis/tardis_portal/templates/tardis_portal/shared.html
@@ -40,7 +40,7 @@
         <h4><strong>{{ shared_experiments.count }}</strong>
         Shared Experiment{{ shared_experiments.count|pluralize }}</h4>
       </div>
-      <div class="pull-right">
+      <div class="pull-right mb-1">
         <button type="button" class="btn btn-outline-secondary btn-sm"
                 onclick="$('#myshared .collapse').collapse('hide');" >
         Collapse all</button>
