Make authors font style consistent with exp list view, and use pluralize to ensure that an exp with no datasets displays "0 Datasets", rather than "0 Dataset".

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
@@ -17,7 +17,7 @@
 {% endcapture %}
 
 <h3 style="display: inline">
-{{experiment.datasets.count}} Dataset{% if experiment.datasets.count|gt:1 %}s{%endif%}
+  {{experiment.datasets.count}} Dataset{{experiment.datasets.count|pluralize}}
 </h3>
 {% if has_download_permissions or has_write_permissions %}
 
