--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -65,17 +65,14 @@
     {% endif %}
   </div>
   {% endif %}
-  <h1>
-    <span property="dc:title">{{ experiment.title }}</span>
-    <br/>
-    <small>
-        {% for author in experiment.experimentauthor_set.all %}{% capture as creator_span %}<span
-                property="dc:creator"
-                style="white-space: nowrap;">{{ author.author }}</span>{% endcapture %}{% if not forloop.first %}, {% endif %}{% if author.email %}<a
-                href="mailto:{{ author.email }}">{{ creator_span }}</a>{% endif %}{% if author.url %}<a
-                href="{{ author.url }}">{{ creator_span }}</a>{% endif %}{% if not author.email and not author.url %}{{ creator_span }}{% endif %}{% endfor %}
-    </small>
-  </h1>
+  <h1><span property="dc:title">{{ experiment.title }}</span></h1>
+  <span class="text-muted">
+    {% for author in experiment.experimentauthor_set.all %}{% capture as creator_span %}<span
+            property="dc:creator"
+            style="white-space: nowrap;">{{ author.author }}</span>{% endcapture %}{% if not forloop.first %}, {% endif %}{% if author.email %}<a
+            href="mailto:{{ author.email }}">{{ creator_span }}</a>{% endif %}{% if author.url %}<a
+            href="{{ author.url }}">{{ creator_span }}</a>{% endif %}{% if not author.email and not author.url %}{{ creator_span }}{% endif %}{% endfor %}
+  </span>
   <p style="text-align: right">
     {{ experiment|experiment_datasets_badge}}&nbsp;
     {{ experiment|experiment_datafiles_badge }}&nbsp;
