--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -38,8 +38,8 @@
       <div class="clearfix"></div>
       <div id="public-experiments" class="panel-group experiments">
         {% for exp in public_experiments %}
-          <div class="card mb-2" style="background-color: #f5fbff">
-              <div class="card-body py-2" style="background-color: rgba(0, 0, 0, 0);" data-parent="#private-experiments">
+          <div class="card mb-2">
+              <div class="card-header" data-parent="#public-experiments">
                 <div class="row">
                   <div class="accordion-toggle col-md-8 px-1" data-toggle="collapse"
                        onclick="$('#collapse{{exp.id}}').collapse('toggle');" >
@@ -57,7 +57,7 @@
                   </div>
                 </div> {% comment %} class="row" {% endcomment %}
                 <div class="row">
-                  <div class="card-subtitle text-muted col-6 px-1">
+                  <div class="card-subtitle text-muted small col-6 px-1">
                     {% for author in exp.experimentauthor_set.all %}
                       {% if not forloop.first %}, {% endif %}
                       <span property="dc:author">{{ author.author }}</span>
@@ -80,8 +80,10 @@
                     </span>
                   </div>
                 </div>
+              </div>
+              <div id="collapse{{exp.id}}" class="card-body collapse in py-2" data-parent="#public-experiments">
                 <div class="row">
-                  <div id="collapse{{exp.id}}" class="collapse col-md-9 px-1 in">
+                  <div class="col-md-9 px-1">
                   <div class="accordion-inner">
                     <p class="card-text small mb-1">
                       {{exp.description|default:""|bleach}}
