--- a/tardis/tardis_portal/templates/tardis_portal/facility_overview.html
+++ b/tardis/tardis_portal/templates/tardis_portal/facility_overview.html
@@ -165,7 +165,7 @@
                        ng-show="facilityCtrl.isDataViewSelected(1) && !facilityCtrl.loading"
                        ng-cloak>
                     <h2>Latest {{facilityCtrl.selectedFacilityName}} datasets</h2>
-                    <table class="table table-striped table-bordered table-sm small">
+                    <table class="facility-datasets table table-striped table-bordered table-sm">
                       <tr>
                         <th>Owner</th>
                         <th>Group</th>
@@ -203,7 +203,7 @@
                        ng-cloak>
                     <h2>Latest {{facilityCtrl.selectedFacilityName}} datasets by
                         instrument</h2>
-                    <table class="table table-striped table-bordered table-sm small">
+                    <table class="facility-datasets table table-striped table-bordered table-sm">
                       <tr>
                         <th>Owner</th>
                         <th>Group</th>
@@ -246,7 +246,7 @@
                        ng-show="facilityCtrl.isDataViewSelected(3) && !facilityCtrl.loading"
                        ng-cloak>
                     <h2>Latest {{facilityCtrl.selectedFacilityName}} datasets by user</h2>
-                    <table class="table table-striped table-bordered table-sm small">
+                    <table class="facility-datasets table table-striped table-bordered table-sm">
                       <tr>
                         <th>Experiment</th>
                         <th>Dataset description</th>
@@ -331,7 +331,7 @@
 <script type="text/ng-template" id="fileList">
     <div style="max-height: 200px; overflow-y: scroll;">
         <div ng-hide="dataset.datafiles">Loading datafiles...</div>
-        <table class="table table-bordered table-sm small table-striped"
+        <table class="table table-bordered table-sm table-striped"
                ng-show="dataset.datafiles">
             <tr>
                 <th>File name</th>
