--- a/tardis/tardis_portal/templates/tardis_portal/index.html
+++ b/tardis/tardis_portal/templates/tardis_portal/index.html
@@ -35,11 +35,11 @@
         <div id="private-experiments" class="panel-group experiments">
           {% for exp in private_experiments %}
             <div class="card mb-2">
-              <div class="card-header py-2" data-parent="#private-experiments">
+              <div id="private-toggle-{{exp.id}}"
+                   class="card-header accordion-toggle private-experiment py-2"
+                   data-toggle="collapse" data-parent="#private-experiments">
                   <div class="row">
-                    <div id="private-toggle-{{exp.id}}"
-                         class="accordion-toggle private-experiment col-md-8 px-1"
-                         data-toggle="collapse"  data-parent="#private-experiments">
+                    <div class="col-md-8 px-1 pb-1">
                       <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
                       <a class="card-title explink"
                          href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
@@ -94,11 +94,11 @@
     <div id="public-experiments" class="experiments">
         {% for exp in public_experiments %}
           <div class="card mb-2">
-            <div class="card-header" data-parent="#public-experiments">
+            <div id="public-toggle-{{exp.id}}"
+                 class="card-header accordion-toggle public-experiment py-2"
+                 data-toggle="collapse" data-parent="#public-experiments">
               <div class="row">
-                <div id="public-toggle-{{exp.id}}"
-                   class="accordion-toggle public-experiment col-md-8 px-1"
-                   data-toggle="collapse"  data-parent="#public-experiments">
+                <div class="col-md-8 px-1 pb-1">
                   <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
                   <a class="card-title explink"
                      href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
