updating css selector class

--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -219,7 +219,7 @@
                 <img alt="Preview image for Datafile #{{ datafile.id }}"
                      src="{{ thumbnail }}"
                      style="display: block; margin-left: auto; margin-right: auto;"
-                     onerror="$(this).parents('.item').remove()"/>
+                     onerror="$(this).parents('.carousel-item').remove()"/>
               </a>
               <div class="carousel-caption">
                 <h4>{{ datafile.filename }}</h4>
