--- a/tardis/tardis_portal/templates/tardis_portal/index.html
+++ b/tardis/tardis_portal/templates/tardis_portal/index.html
@@ -45,12 +45,7 @@
                          href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
                     </div>
                     <div class="col">
-                      <ul class="list-inline float-right list-unstyled">
-                        <li class="list-inline-item m-0"><div class="badges" id="badge-{{exp.id}}"></div></li>
-                        <li class="list-inline-item m-0">{{ exp|experiment_datasets_badge }}</li>
-                        <li class="list-inline-item m-0">{{ exp|experiment_datafiles_badge }}</li>
-                        <li class="list-inline-item m-0">{{ exp|experiment_public_access_badge }}</li>
-                      </ul>
+                     <div class="badges" id="badge-{{exp.id}}"></div>
                     </div>
                   </div>
                   <div class="row">
