--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -73,13 +73,7 @@
             href="mailto:{{ author.email }}">{{ creator_span }}</a>{% endif %}{% if author.url %}<a
             href="{{ author.url }}">{{ creator_span }}</a>{% endif %}{% if not author.email and not author.url %}{{ creator_span }}{% endif %}{% endfor %}
   </span>
-  <p style="text-align: right">
-    {{ experiment|experiment_datasets_badge}}&nbsp;
-    {{ experiment|experiment_datafiles_badge }}&nbsp;
-    {{ experiment|experiment_size_badge }}&nbsp;
-    {{ experiment|experiment_last_updated_badge }}&nbsp;
-    <span id="experiment-public-access-badge">{{ experiment|experiment_public_access_badge }}</span>&nbsp;
-  </p>
+  <div class="badges" id="badge-{{experiment.id}}" style="text-align: right"></div>
 </div>
 
 <div class="row" >
@@ -112,4 +106,5 @@
   </div>
 </div>
     {% render_bundle 'tardis_portal_view_experiment' %}
+    {% render_bundle 'experiment_view_badges' %}
 {% endblock %}
