--- a/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
@@ -23,6 +23,12 @@
             {{ form.description | add_class:"form-control" }}
           </div>
         </div>
+	<div class="form-group row">
+          <label class="col-form-label col-md-2 " for="id_dataset_id">Dataset ID</label>
+          <div class=" col-md-9 ">
+            {{ form.dataset_id | add_class:"form-control" }}
+          </div>
+        </div>
         <div class="form-group row">
           <label class="col-form-label col-md-2 " for="id_directory">Directory</label>
           <div class=" col-md-9 ">
