--- a/tardis/tardis_portal/templates/tardis_portal/create_project.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_project.html
@@ -45,7 +45,7 @@
             </p>
           </div>
         </div>
-        <div class="form-group row">
+        <!--div class="form-group row">
           <div class="offset-md-2 col-md-9 text-right">
             <a class="btn btn-outline-secondary"
               {% if experiment_id %}
@@ -62,7 +62,7 @@
               Save
             </button>
           </div>
-        </div>
+        </div-->
       </form>
     </div>
   </div>
