--- a/tardis/tardis_portal/templates/tardis_portal/create_project.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_project.html
@@ -39,13 +39,16 @@
         <div class="form-group row">
           <label class="col-form-label col-md-2 " for="authors">Contacts</label>
           <div class=" col-md-9 ">
-            {{ form.contacts | add_class:"form-control" }}
-            <p class="help-block mb-0">
-                Comma-separated upis
-            </p>
+            {{ form.contact | add_class:"form-control" }}
           </div>
         </div>
-        <!--div class="form-group row">
+	<div class="form-group row">
+          <label class="col-form-label col-md-2 " for="authors">Members</label>
+          <div class=" col-md-9 ">
+            {{ form.member | add_class:"form-control" }}
+          </div>
+        </div>
+        <div class="form-group row">
           <div class="offset-md-2 col-md-9 text-right">
             <a class="btn btn-outline-secondary"
               {% if experiment_id %}
@@ -62,7 +65,7 @@
               Save
             </button>
           </div>
-        </div-->
+        </div>
       </form>
     </div>
   </div>
