Move project_id out of view_experiment in prep for removing project_id field

--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -67,7 +67,7 @@
   <h1>
     <span property="dc:title">{{ experiment.title }}</span>
     <br/>
-    <span property="dc:title">Project: {{ experiment.project_id }}</span>
+    <span property="dc:title">Project: {{ experiment.project_model.name }}</span>
     <br/>
     <small>
         {% for author in experiment.experimentauthor_set.all %}{% capture as creator_span %}<span
