--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -51,6 +51,18 @@
             {{ form.description | add_class:"form-control" }}
           </div>
         </div>
+	<div class="form-group row">
+          <label class="col-form-label col-md-2 " for="id_instrument">Sensitive Experiment</label>
+          <div class=" col-md-9 ">
+              {{ form.sensitive | add_class:"form-control" }}
+          </div>
+        </div>
+	<div class="form-group row">
+          <label class="col-form-label col-md-2 " for="id_instrument">Embargo until</label>
+          <div class=" col-md-9 ">
+              {{ form.embargo_until | add_class:"form-control" }}
+          </div>
+        </div
         <div class="form-group row">
           <div class="offset-md-2 col-md-9 text-right">
             <a class="btn btn-outline-secondary"
