--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_user_readonly.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_user_readonly.html
@@ -30,6 +30,9 @@
                           {% if user_acl.canRead %}
                           <span class="badge badge-success">Read</span>
                           {% endif %}
+                          {% if user_acl.canDownload %}
+                          <span class="badge badge-success">Download</span>
+                          {% endif %}
                           {% if user_acl.canWrite %}
                           <span class="badge badge-success">Edit</span>
                           {% endif %}
