--- a/tardis/tardis_portal/templates/tardis_portal/ajax/add_group_result.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/add_group_result.html
@@ -11,6 +11,9 @@
       {% if group_acl.canRead %}
       <span class="badge badge-success">Read</span>
       {% endif %}
+      {% if group_acl.canDownload %}
+      <span class="badge badge-success">Download</span>
+      {% endif %}
       {% if group_acl.canWrite %}
       <span class="badge badge-success">Edit</span>
       {% endif %}
