Enable Users (non admin) to add download permissions

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group.html
@@ -25,7 +25,8 @@
     <label class="col-form-label" for="id_permissions">Permissions</label>
     <select id="id_permission_group" class="form-control" style="max-width: 200px;">
       <option value="read">View Only</option>
-      <option value="edit">View and Edit</option>
+      <option value="download">View and Download</option>
+      <option value="edit">View, Download, Edit</option>
       <option value="owner">Full Owner</option>
     </select>
   </div>
