adding dataset tile bundle to webpack config and view exp page

--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -102,6 +102,7 @@
     </div>
   </div>
   <div id="datasets-pane" class="col-md-6">
+    {% render_bundle 'dataset_tiles' %}
     {% include "tardis_portal/ajax/experiment_datasets.html" %}
   </div>
 </div>
