--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
@@ -39,7 +39,7 @@
 
     <div id="datasets" style="word-break: break-all;">
     <p>Please wait... <img src="{% static 'images/ajax-loader.gif'%}" alt="loading" /></p>
-    {{ experiment|dataset_tiles:has_download_permissions }}
+    {% dataset_tiles experiment.id request.user has_download_permissions %}
     </div>
 
     {% if experiment.datasets.count|gt:4 %}
