--- a/tardis/tardis_portal/templates/tardis_portal/experiment_tags/experiment_browse_item.html
+++ b/tardis/tardis_portal/templates/tardis_portal/experiment_tags/experiment_browse_item.html
@@ -30,7 +30,7 @@
     </div>
   {% endif %}
   <div class="pull-right">
-    {{ experiment|experiment_datasets_badge }}
+    {% experiment_datasets_badge experiment.id request.user %}
     &nbsp;
     {{ experiment|experiment_datafiles_badge }}
     &nbsp;
