--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -50,7 +50,7 @@
                   <div class="col">
                     <ul class="list-inline float-right list-unstyled">
                       <li class="list-inline-item m-0">{{ exp|experiment_last_updated_badge }}</li>
-                      <li class="list-inline-item m-0">{{ exp|experiment_datasets_badge }}</li>
+                      <li class="list-inline-item m-0">{% experiment_datasets_badge experiment.id request.user %}</li>
                       <li class="list-inline-item m-0">{{ exp|experiment_datafiles_badge }}</li>
                       <li class="list-inline-item m-0">{{ exp|experiment_public_access_badge }}</li>
                     </ul>
