--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
@@ -3,6 +3,8 @@
 {% load static from staticfiles %}
 {% load dataset_tags %}
 
+{% dataset_count experiment.id request.user as dataset_safecount %}
+
 {% capture as action_bar %}
   {% if has_download_permissions or has_write_permissions %}
     {% if has_download_permissions %}
@@ -17,7 +19,7 @@
 {% endcapture %}
 
 <h3 style="display: inline">
-  {% dataset_count experiment.id request.user %} Dataset{{{% dataset_count experiment.id request.user %}|pluralize}}
+  {{dataset_safecount}} Dataset{{dataset_safecount|pluralize}}
 </h3>
 {% if has_download_permissions or has_write_permissions %}
 
@@ -42,7 +44,7 @@
     {% dataset_tiles experiment.id request.user has_download_permissions %}
     </div>
 
-    {% if {% dataset_count experiment.id request.user %}|gt:4 %}
+    {% if dataset_safecount|gt:4 %}
     {{ action_bar }}
     {% endif %}
   </form>
